external-crates/move/crates/move-compiler/tests/move_check/typing/pack_unpack_private.exp
error[E04001]: restricted visibility
  ┌─ tests/move_check/typing/pack_unpack_private.move:8:9
  │
2 │     struct T {}
  │            - Struct may only be constructed in the module in which they are declared
  ·
8 │         C::T {}
  │         ^^^^^^^ Invalid instantiation of '0x43::C::T'

error[E04001]: restricted visibility
   ┌─ tests/move_check/typing/pack_unpack_private.move:11:13
   │
 2 │     struct T {}
   │            - Struct may only be deconstructed in the module in which they are declared
   ·
11 │         let C::T {} = c;
   │             ^^^^^^^ Invalid deconstruction binding of '0x43::C::T'

